--- a/android/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/android/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -27,53 +27,59 @@
         </aapt:attr>
     </path>
     
-    <!-- Person 1 (left) - Head -->
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M32,28C35.314,28 38,30.686 38,34C38,37.314 35.314,40 32,40C28.686,40 26,37.314 26,34C26,30.686 28.686,28 32,28Z"/>
+    <!-- Group to translate icon content downward for better centering -->
+    <group
+        android:translateY="5">
+        
+        <!-- Person 1 (left) - Head -->
+        <path
+            android:fillColor="#FFFFFF"
+            android:pathData="M32,28C35.314,28 38,30.686 38,34C38,37.314 35.314,40 32,40C28.686,40 26,37.314 26,34C26,30.686 28.686,28 32,28Z"/>
+        
+        <!-- Person 1 - Body -->
+        <path
+            android:fillColor="#FFFFFF"
+            android:pathData="M30,42C30,42 30,38 32,38C34,38 34,42 34,42L34,68C34,70 32,70 32,70C30,70 30,68 30,68Z"/>
+        
+        <!-- Person 1 - Left arm -->
+        <path
+            android:fillColor="#FFFFFF"
+            android:pathData="M20,31Q23,27 27,29L29,33Q28,34 25,33Z"/>
+        
+        <!-- Person 1 - Right arm -->
+        <path
+            android:fillColor="#FFFFFF"
+            android:pathData="M44,31Q41,27 37,29L35,33Q36,34 39,33Z"/>
+        
+        <!-- Person 2 (right) - Head -->
+        <path
+            android:fillColor="#FFFFFF"
+            android:pathData="M80,28C83.314,28 86,30.686 86,34C86,37.314 83.314,40 80,40C76.686,40 74,37.314 74,34C74,30.686 76.686,28 80,28Z"/>
+        
+        <!-- Person 2 - Body -->
+        <path
+            android:fillColor="#FFFFFF"
+            android:pathData="M78,42C78,42 78,38 80,38C82,38 82,42 82,42L82,68C82,70 80,70 80,70C78,70 78,68 78,68Z"/>
+        
+        <!-- Person 2 - Left arm -->
+        <path
+            android:fillColor="#FFFFFF"
+            android:pathData="M68,31Q71,27 75,29L77,33Q76,34 73,33Z"/>
+        
+        <!-- Person 2 - Right arm -->
+        <path
+            android:fillColor="#FFFFFF"
+            android:pathData="M92,31Q89,27 85,29L83,33Q84,34 87,33Z"/>
+        
+        <!-- Connection line (simplified curved path) -->
+        <path
+            android:fillColor="#FFFFFF"
+            android:pathData="M40,50 Q54,44 68,50 Q54,46 40,50 Z"/>
+        
+        <!-- Sports ball -->
+        <path
+            android:fillColor="#FFC107"
+            android:pathData="M54,36C56.209,36 58,37.791 58,40C58,42.209 56.209,44 54,44C51.791,44 50,42.209 50,40C50,37.791 51.791,36 54,36Z"/>
     
-    <!-- Person 1 - Body -->
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M30,42C30,42 30,38 32,38C34,38 34,42 34,42L34,68C34,70 32,70 32,70C30,70 30,68 30,68Z"/>
-    
-    <!-- Person 1 - Left arm -->
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M20,31Q23,27 27,29L29,33Q28,34 25,33Z"/>
-    
-    <!-- Person 1 - Right arm -->
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M44,31Q41,27 37,29L35,33Q36,34 39,33Z"/>
-    
-    <!-- Person 2 (right) - Head -->
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M80,28C83.314,28 86,30.686 86,34C86,37.314 83.314,40 80,40C76.686,40 74,37.314 74,34C74,30.686 76.686,28 80,28Z"/>
-    
-    <!-- Person 2 - Body -->
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M78,42C78,42 78,38 80,38C82,38 82,42 82,42L82,68C82,70 80,70 80,70C78,70 78,68 78,68Z"/>
-    
-    <!-- Person 2 - Left arm -->
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M68,31Q71,27 75,29L77,33Q76,34 73,33Z"/>
-    
-    <!-- Person 2 - Right arm -->
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M92,31Q89,27 85,29L83,33Q84,34 87,33Z"/>
-    
-    <!-- Connection line (simplified curved path) -->
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M40,50 Q54,44 68,50 Q54,46 40,50 Z"/>
-    
-    <!-- Sports ball -->
-    <path
-        android:fillColor="#FFC107"
-        android:pathData="M54,36C56.209,36 58,37.791 58,40C58,42.209 56.209,44 54,44C51.791,44 50,42.209 50,40C50,37.791 51.791,36 54,36Z"/>
+    </group>
 </vector>
